--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 body {
   margin: 0;
+  padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -10,4 +11,62 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+.parent{
+  width: 100%;
+  background-color: #deebff;
+  min-height: 60vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+.child{
+  width: 80%;
+  display: flex;
+}
+.box1{
+  width: 50%;
+  padding-right: 8%;
+  justify-content: flex-start;
+}
+.box1>h2{
+    text-align: start;
+    font-weight: 900;
+    font-size: 4rem;
+    color:#212529;
+    line-height: 1.2;
+    margin:0px
+}
+.box1>p{
+  text-align: start;
+  color: #212529;
+  font-size: 16px;
+} 
+.box2{
+  width: 50%;
+}
+.box2>img{
+  width: 90%;
+  height: 80%;
+}
+.box1__btns{
+  display: flex;
+  justify-content: flex-start;  
+}
+.btn{
+  background-color: #0d6efd;
+  padding-left: 3rem;
+  padding-right: 3rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  border: none;
+  color: #fff;
+  font-size: 16px;
+  border-radius: 5px;
+}
+.--2{
+  background-color: #ff3119;
+  margin: 0 20px;
 }
